refactor(service): Improve AIServiceFactory dependency injection and stream operations
- Remove @RequiredArgsConstructor annotation and use explicit constructor injection
- Add ModelInfo import for type-safe model mapping
- Replace lambda expression with method reference (model -> model.getId() to ModelInfo::getId)
- Simplify stream collection using toList() instead of collect(Collectors.toList())
- Improve code readability and follow modern Java best practices